--- a/index.html
+++ b/index.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Isaac Johnston | Luxury Real Estate</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Isaac Johnston | Luxury Real Estate & Wealth</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="https://www.instagram.com/yourusername">Instagram</a></li>
-                <li><a href="https://www.linkedin.com/in/yourusername">LinkedIn</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- Header Section -->
+  <header>
+    <div class="header-content">
+      <h1>Isaac Johnston</h1>
+      <h2>Criminal Justice & Psychology Grad | Wealth & Real Estate</h2>
+      <p>Charlotte, NC</p>
+    </div>
+  </header>
 
-    <section id="home">
-        <h1>Welcome to Isaac Johnston's Luxury Real Estate</h1>
-    </section>
+  <!-- About Me Section -->
+  <section id="about">
+    <h3>About Me</h3>
+    <p>I’m Isaac Johnston, a soon to be graduate of UNC Charlotte with a background in Criminal Justice and Psychology. These fields have sharpened my ability to analyze complex situations, understand human behavior, and communicate effectively — skills that I now leverage to fuel my entrepreneurial journey.</p>
+    <p>I firmly believe everyone has something valuable to teach and contribute, and I’m always eager to learn from those who’ve walked the path before me. Whether it’s wealth-building, investment strategies, or the complexities of real estate and finance, I’m committed to absorbing knowledge from all angles.</p>
+    <p>Currently, I’m focused on securing a strategic role in real estate or finance to gain the expertise needed to scale my investments. Once I secure my first loan, my goal is to transition into more remote and flexible roles, giving me the time and freedom to focus on building my asset portfolio and generating passive income streams.</p>
+  </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Write a short bio about yourself here.</p>
-    </section>
+  <!-- Target Jobs & Roles Section -->
+  <section id="target-roles">
+    <h3>Target Jobs & Roles</h3>
+    <ul>
+      <li>Real Estate Agent/Broker: Mastering the art of buying and selling properties while developing skills to evaluate investments for long-term wealth creation.</li>
+      <li>Mortgage Broker/Loan Officer: Gaining expertise in the loan process and learning how to leverage capital to finance investments.</li>
+      <li>Financial Analyst/Advisor: Deepening my understanding of investment strategies, property valuations, and identifying scalable opportunities for growth.</li>
+      <li>Property Management: Managing multiple properties to optimize income streams and enhance overall cash flow.</li>
+      <li>Real Estate Investment Firms: Leveraging the knowledge of seasoned investors to scale a real estate portfolio and achieve long-term financial independence.</li>
+    </ul>
+  </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+  <!-- What I'm Looking For Section -->
+  <section id="looking-for">
+    <h3>What I’m Looking For</h3>
+    <ul>
+      <li><strong>Mentorship:</strong> Seeking guidance from experienced professionals who understand wealth-building, investments, and asset protection.</li>
+      <li><strong>Opportunities for Growth:</strong> Looking for salaried positions in real estate, finance, and investment strategies with the flexibility for personal ventures.</li>
+      <li><strong>Networking:</strong> Constantly seeking connections with like-minded individuals focused on scalable wealth-building and financial independence.</li>
+    </ul>
+  </section>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+  <!-- Closing Note Section -->
+  <section id="closing">
+    <h3>Closing Note</h3>
+    <p>If you’re involved in real estate, finance, or any wealth-building sector, I’d love to connect. Whether it’s over coffee, a beer, or at a festival — I’m always open to new ideas, collaborations, and networking with people who understand the power of long-term wealth strategies.</p>
+    <p>I also value constructive criticism to continuously improve, and I’m always open to feedback that helps me grow.</p>
+  </section>
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Send</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Isaac Johnston</p>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Isaac Johnston</p>
+  </footer>
 </body>
 </html>
