--- a/index.html
+++ b/index.html
@@ -1,62 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Isaac Johnston | Luxury Real Estate & Wealth</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Isaac Johnston - Luxury Real Estate & Wealth Building">
+    <meta name="robots" content="noindex, nofollow">  <!-- Security to prevent scraping -->
+    <meta name="author" content="Isaac Johnston">
+    <title>Isaac Johnston - Luxury Real Estate</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 </head>
 <body>
-  <!-- Header Section -->
-  <header>
-    <div class="header-content">
-      <h1>Isaac Johnston</h1>
-      <h2>Criminal Justice & Psychology Grad | Wealth & Real Estate</h2>
-      <p>Charlotte, NC</p>
+    <div class="page-wrapper">
+        <!-- Header Section -->
+        <header id="header" class="section">
+            <div class="header-content">
+                <h1>Isaac Johnston</h1>
+                <h2>Luxury Real Estate & Wealth Building</h2>
+                <p>Transforming Dreams into Reality</p>
+            </div>
+        </header>
+
+        <!-- Hero Section with Unique Animation -->
+        <section id="hero" class="section">
+            <div class="hero-wrapper">
+                <div class="hero-text">
+                    <h3>Your Luxury Real Estate Partner</h3>
+                    <p>Let’s build lasting wealth through strategic investments in real estate.</p>
+                </div>
+                <div class="hero-image">
+                    <img src="assets/yourimage.jpg" alt="Luxury Real Estate">
+                </div>
+            </div>
+        </section>
+
+        <!-- About Me Section -->
+        <section id="about" class="section custom-scroll">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>I’m Isaac Johnston, a luxury real estate enthusiast with an analytical mind and a passion for wealth building. My goal is to help clients achieve their financial freedom while also building a legacy.</p>
+            </div>
+        </section>
+
+        <!-- Target Jobs Section -->
+        <section id="target-jobs" class="section">
+            <div class="container">
+                <h2>What I’m Looking For</h2>
+                <div class="jobs-list">
+                    <div class="job-item">Real Estate Agent</div>
+                    <div class="job-item">Mortgage Broker</div>
+                    <div class="job-item">Financial Advisor</div>
+                    <div class="job-item">Real Estate Investment Firms</div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Form Section -->
+        <section id="contact" class="section contact-form">
+            <div class="container">
+                <h2>Contact Me</h2>
+                <form id="contact-form">
+                    <input type="text" placeholder="Your Name" id="name" required>
+                    <input type="email" placeholder="Your Email" id="email" required>
+                    <textarea placeholder="Your Message" id="message" required></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer id="footer" class="section">
+            <div class="container">
+                <p>© 2025 Isaac Johnston | <a href="yourlinkedin" target="_blank">LinkedIn</a> | <a href="yourinstagram" target="_blank">Instagram</a></p>
+            </div>
+        </footer>
     </div>
-  </header>
 
-  <!-- About Me Section -->
-  <section id="about">
-    <h3>About Me</h3>
-    <p>I’m Isaac Johnston, a soon to be graduate of UNC Charlotte with a background in Criminal Justice and Psychology. These fields have sharpened my ability to analyze complex situations, understand human behavior, and communicate effectively — skills that I now leverage to fuel my entrepreneurial journey.</p>
-    <p>I firmly believe everyone has something valuable to teach and contribute, and I’m always eager to learn from those who’ve walked the path before me. Whether it’s wealth-building, investment strategies, or the complexities of real estate and finance, I’m committed to absorbing knowledge from all angles.</p>
-    <p>Currently, I’m focused on securing a strategic role in real estate or finance to gain the expertise needed to scale my investments. Once I secure my first loan, my goal is to transition into more remote and flexible roles, giving me the time and freedom to focus on building my asset portfolio and generating passive income streams.</p>
-  </section>
-
-  <!-- Target Jobs & Roles Section -->
-  <section id="target-roles">
-    <h3>Target Jobs & Roles</h3>
-    <ul>
-      <li>Real Estate Agent/Broker: Mastering the art of buying and selling properties while developing skills to evaluate investments for long-term wealth creation.</li>
-      <li>Mortgage Broker/Loan Officer: Gaining expertise in the loan process and learning how to leverage capital to finance investments.</li>
-      <li>Financial Analyst/Advisor: Deepening my understanding of investment strategies, property valuations, and identifying scalable opportunities for growth.</li>
-      <li>Property Management: Managing multiple properties to optimize income streams and enhance overall cash flow.</li>
-      <li>Real Estate Investment Firms: Leveraging the knowledge of seasoned investors to scale a real estate portfolio and achieve long-term financial independence.</li>
-    </ul>
-  </section>
-
-  <!-- What I'm Looking For Section -->
-  <section id="looking-for">
-    <h3>What I’m Looking For</h3>
-    <ul>
-      <li><strong>Mentorship:</strong> Seeking guidance from experienced professionals who understand wealth-building, investments, and asset protection.</li>
-      <li><strong>Opportunities for Growth:</strong> Looking for salaried positions in real estate, finance, and investment strategies with the flexibility for personal ventures.</li>
-      <li><strong>Networking:</strong> Constantly seeking connections with like-minded individuals focused on scalable wealth-building and financial independence.</li>
-    </ul>
-  </section>
-
-  <!-- Closing Note Section -->
-  <section id="closing">
-    <h3>Closing Note</h3>
-    <p>If you’re involved in real estate, finance, or any wealth-building sector, I’d love to connect. Whether it’s over coffee, a beer, or at a festival — I’m always open to new ideas, collaborations, and networking with people who understand the power of long-term wealth strategies.</p>
-    <p>I also value constructive criticism to continuously improve, and I’m always open to feedback that helps me grow.</p>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Isaac Johnston</p>
-  </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
