Add LinkedIn profile link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Socials row -->
         <div class="px-8 pt-4 grid grid-cols-5 gap-2 text-sm">
           <a class="group py-2 rounded-xl border border-slate-200 dark:border-slate-800 text-center hover:bg-slate-100 dark:hover:bg-slate-800" href="https://github.com/IsaacInPursuit" aria-label="GitHub">🐙<span class="sr-only">GitHub</span></a>
-          <a class="group py-2 rounded-xl border border-slate-200 dark:border-slate-800 text-center hover:bg-slate-100 dark:hover:bg-slate-800" href="#" aria-label="LinkedIn">in<span class="sr-only">LinkedIn</span></a>
+            <a class="group py-2 rounded-xl border border-slate-200 dark:border-slate-800 text-center hover:bg-slate-100 dark:hover:bg-slate-800" href="https://www.linkedin.com/in/isaacinpursuit/" aria-label="LinkedIn">in<span class="sr-only">LinkedIn</span></a>
           <a class="group py-2 rounded-xl border border-slate-200 dark:border-slate-800 text-center hover:bg-slate-100 dark:hover:bg-slate-800" href="mailto:isaacinpursuit@gmail.com" aria-label="Email">✉️<span class="sr-only">Email</span></a>
           <a class="group py-2 rounded-xl border border-slate-200 dark:border-slate-800 text-center hover:bg-slate-100 dark:hover:bg-slate-800" href="#contact" aria-label="Contact form">📝<span class="sr-only">Contact</span></a>
           <a class="group py-2 rounded-xl border border-slate-200 dark:border-slate-800 text-center hover:bg-slate-100 dark:hover:bg-slate-800" href="/links.vcf" aria-label="vCard">📇<span class="sr-only">vCard</span></a>
