--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
               <div class="text-xl">↗</div>
             </div>
           </a>
+            <a class="block w-full rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-4 hover:bg-slate-100 dark:hover:bg-slate-800 transition" href="/fractal.html">
+              <div class="flex items-center justify-between">
+                <div>
+                  <div class="font-semibold">Fractal Demo</div>
+                  <div class="text-sm opacity-70">Canvas fractal with scroll</div>
+                </div>
+                <div class="text-xl">🌀</div>
+              </div>
+            </a>
+
 
           <a class="block w-full rounded-2xl border border-slate-300 dark:border-slate-700 px-5 py-4 hover:bg-slate-100 dark:hover:bg-slate-800 transition" href="#farm">
             <div class="flex items-center justify-between">
