--- a/contact-form.html
+++ b/contact-form.html
@@ -28,7 +28,20 @@
   <script>
     tailwind.config = { darkMode: 'class', theme: { extend: {
       fontFamily: { sans: ['Inter','system-ui','sans-serif'] },
-      colors: { brand: { 500:'#06b6d4',600:'#0891b2',700:'#0e7490' } },
+      colors: {
+        brand: {
+          50: '#f0f9ff',
+          100: '#e0f2fe',
+          200: '#bae6fd',
+          300: '#7dd3fc',
+          400: '#38bdf8',
+          500: '#0ea5e9',
+          600: '#0478a5',
+          700: '#03506d',
+          800: '#02344c',
+          900: '#012638'
+        }
+      },
       boxShadow: { soft: '0 12px 32px rgba(2,6,23,.18)' }
     }}};
   </script>
